--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "styled-reset": "^4.5.2",
+    "twin.macro": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,6 +40,14 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.34",
+    "babel-plugin-macros": "^3.1.0",
+    "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "^3.4.3"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
   }
 }
